--- a/week01.html
+++ b/week01.html
@@ -8,5 +8,15 @@
 <body>
     <h1>This is my sheep.</h1>
     <img src="unnamed.png">
+    <ol>
+        <li>車窗外</li>
+        <li>這夜色</li>
+        <li>流光溢彩</li>
+    </ol>
+    <ul>
+        <li>別忘了</li>
+        <li>閉上眼</li>
+        <li>才算醒來</li>
+    </ul>
 </body>
 </html>
