--- a/week01.html
+++ b/week01.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>So Long,Adele</title>
+   <style>
+    h1{
+        color: thistle;
+    }
+    .byy{
+        border-top: 5px;
+    }
+   </style>
 </head>
 <body>
     <h1>This is my sheep.</h1>
     <img src="unnamed.png">
     <ol>
-        <li>車窗外</li>
+        <li >車窗外</li>
         <li>這夜色</li>
         <li>流光溢彩</li>
     </ol>
@@ -18,5 +26,18 @@
         <li>閉上眼</li>
         <li>才算醒來</li>
     </ul>
+    <table>
+        <tr>
+            <th class="byy">000</th>
+            <th>000</th>
+            <th>000</th>
+        </tr>
+        <tr>
+            <td colspan="2" rowspan="2">111</td>
+            <td>111</td>
+            <td>111</td>
+
+        </tr>
+    </table>
 </body>
 </html>
