--- a/week01.html
+++ b/week01.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link href="week01.css" rel="stylesheet"/>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,14 +11,17 @@
     }
     .byy{
         border-top: 5px;
+        color: red;
     }
    </style>
 </head>
 <body>
     <h1>This is my sheep.</h1>
-    <img src="unnamed.png">
+    <a href="https://arknights.fandom.com/wiki/So_Long,_Adele" alt="So" target="_blank">
+        <img src="unnamed.png">
+    </a>
     <ol>
-        <li >車窗外</li>
+        <li class="hh">車窗外</li>
         <li>這夜色</li>
         <li>流光溢彩</li>
     </ol>
@@ -35,8 +39,14 @@
         <tr>
             <td colspan="2" rowspan="2">111</td>
             <td>111</td>
-            <td>111</td>
-
+        </tr>
+        <tr>
+            <th class="byy">000</th>
+        </tr>
+        <tr>
+            <th class="byy">000</th>
+            <th>112</th>
+            <th>113</th>
         </tr>
     </table>
 </body>
